--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <java.version>11</java.version>
         <commons-io.version>2.11.0</commons-io.version>
         <jmeter.version>5.4.3</jmeter.version>
+        <springdoc-openapi.version>1.6.6</springdoc-openapi.version>
         <zip4j.version>2.9.1</zip4j.version>
     </properties>
 
@@ -94,6 +95,11 @@
             <groupId>net.lingala.zip4j</groupId>
             <artifactId>zip4j</artifactId>
             <version>${zip4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi.version}</version>
         </dependency>
     </dependencies>
 </project>
