--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
         run: echo "PROJECT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
 
       - name: Build with Maven
-        run: mvn -B package -DskipTests
+        run: mvn -B package -DskipITs
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
