--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Java
         uses: actions/setup-java@v2
@@ -21,5 +23,19 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+#      - name: Cache SonarCloud packages
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.sonar/cache
+#          key: ${{ runner.os }}-sonar
+#          restore-keys: |
+#            ${{ runner.os }}-sonar
+
       - name: Build with Maven
-        run: mvn -B verify
+        run: mvn -B verify -P no-jmeter
+
+#      - name: SonarCloud analysis
+#        run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ehrbase_webtester
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
