add snapshot repo

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,19 @@
         </license>
     </licenses>
 
+    <repositories>
+        <repository>
+            <id>ossrh-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <properties>
         <java.version>11</java.version>
         <commons-io.version>2.11.0</commons-io.version>
