--- a/pom.xml
+++ b/pom.xml
@@ -244,7 +244,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.17.1</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.ehrbase.openehr</groupId>
             <artifactId>jooq-pg</artifactId>
