--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ logging:
     org.hibernate: warn
     org.springframework: warn
 loader:
-  enabled: true
+  enabled: false
 
 management:
   health:
