--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.22.5</version>
+                <configuration>
+                    <java>
+                        <toggleOffOn>
+                            <off>@format:off</off>
+                            <on>@format:on</on>
+                        </toggleOffOn>
+                        <palantirJavaFormat>
+                            <version>2.24.0</version>
+                        </palantirJavaFormat>
+                        <licenseHeader>
+                            <file>${project.basedir}/license-header</file>
+                        </licenseHeader>
+                    </java>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
