--- a/src/main/resources/application-yuga.yml
+++ b/src/main/resources/application-yuga.yml
@@ -3,8 +3,10 @@ spring:
     url: jdbc:yugabytedb://localhost:5433/ehrbase
     driver-class-name: com.yugabyte.Driver
     hikari:
-      maximum-pool-size: 20
+      maximum-pool-size: 40
       connection-init-sql: 'SET yb_disable_transactional_writes=true'
+    hikarisecond:
+      maximum-pool-size: 2
   jooq:
     sql-dialect: YUGABYTEDB
 
