--- a/src/main/resources/application-yuga.yml
+++ b/src/main/resources/application-yuga.yml
@@ -3,11 +3,14 @@ spring:
     url: jdbc:yugabytedb://localhost:5433/ehrbase
     driver-class-name: com.yugabyte.Driver
     hikari:
-      connectionTimeout: 60000
-      maximum-pool-size: 40
+      connectionTimeout: 600000
+      maximum-pool-size: 65
       connection-init-sql: 'SET yb_disable_transactional_writes=true;SET yb_enable_upsert_mode=true;'
     hikarisecond:
       maximum-pool-size: 2
   jooq:
     sql-dialect: YUGABYTEDB
 
+logging:
+  level:
+    org.ehrbase.webtester.service.loader: debug
