--- a/pom.xml
+++ b/pom.xml
@@ -156,15 +156,28 @@
                 <artifactId>bom</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
-                <version>0.21.0-SNAPSHOT</version>
+                <version>0.22.0-SNAPSHOT</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.ehrbase.openehr.sdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>1.22.0-SNAPSHOT</version>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.xmlbeans</groupId>
+                <artifactId>xmlbeans</artifactId>
+                <version>3.1.0</version>
+            </dependency>
         </dependencies>
-
-
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
