--- a/.github/workflows/deploy-experimental.yaml
+++ b/.github/workflows/deploy-experimental.yaml
@@ -1,8 +1,8 @@
-name: deploy
+name: deploy experimental
 
 on:
   push:
-    branches: [ CDR-510_load_matrix_data ]
+    branches: [ feature/CDR-510_load_matrix_data ]
   workflow_dispatch:
 
 jobs:
@@ -23,6 +23,8 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipITs
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
