--- a/.github/workflows/deploy-experimental.yaml
+++ b/.github/workflows/deploy-experimental.yaml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          version: v0.7.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
