--- a/.github/workflows/deploy-experimental.yaml
+++ b/.github/workflows/deploy-experimental.yaml
@@ -37,6 +37,7 @@ jobs:
       - name: Build and push (experimental )
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ehrbase/webtesteryugar:yugabyte-experimental
-          version: v0.7.0
+
