CDR-510 Default value for matrix insert threads

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,8 @@ logging:
     org.springframework: warn
 loader:
   enabled: false
-  keepIndexes: false
+  keepIndexes: true
+  matrixInsertThreads: 10
 
 management:
   health:
