--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
                 <artifactId>bom</artifactId>
                 <type>pom</type>
                 <scope>import</scope>
-                <version>0.22.0-SNAPSHOT</version>
+                <version>0.22.0</version>
             </dependency>
 
         </dependencies>
